Fixed Hive support for Spark-3.2.x