@@ -41,7 +41,6 @@ import org.apache.hadoop.hive.ql.parse.OpParseContext;
 import org.apache.hadoop.hive.ql.plan.AggregationDesc;
 import org.apache.hadoop.hive.ql.plan.ExprNodeColumnDesc;
 import org.apache.hadoop.hive.ql.plan.ExprNodeDesc;
-import org.apache.hadoop.hive.ql.plan.ExprNodeDescUtils;
 import org.apache.hadoop.hive.ql.plan.GroupByDesc;
 import org.apache.hadoop.hive.ql.plan.GroupByDesc.Mode;
 import org.apache.hadoop.hive.ql.plan.OperatorDesc;
@@ -91,11 +90,13 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
   // so aggregationIsDistinct is a boolean array instead of a single number.
   private transient boolean[] aggregationIsDistinct;
   // Map from integer tag to distinct aggrs
-  private transient Map<Integer, Set<Integer>> distinctKeyAggrs = new HashMap<>();
+  private transient Map<Integer, Set<Integer>> distinctKeyAggrs =
+    new HashMap<Integer, Set<Integer>>();
   // Map from integer tag to non-distinct aggrs with key parameters.
-  private transient Map<Integer, Set<Integer>> nonDistinctKeyAggrs = new HashMap<>();
+  private transient Map<Integer, Set<Integer>> nonDistinctKeyAggrs =
+    new HashMap<Integer, Set<Integer>>();
   // List of non-distinct aggrs.
-  private transient Set<Integer> nonDistinctAggrs = new HashSet<>();
+  private transient List<Integer> nonDistinctAggrs = new ArrayList<Integer>();
   // Union expr for distinct keys
   private transient ExprNodeEvaluator unionExprEval;
 
@@ -272,7 +273,7 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       }
     }
     // init aggregationParameterFields
-    List<AggregationDesc> aggrs = conf.getAggregators();
+    ArrayList<AggregationDesc> aggrs = conf.getAggregators();
     aggregationParameterFields = new ExprNodeEvaluator[aggrs.size()][];
     aggregationParameterObjectInspectors = new ObjectInspector[aggrs.size()][];
     aggregationParameterStandardObjectInspectors = new ObjectInspector[aggrs.size()][];
@@ -280,7 +281,7 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
     aggregationIsDistinct = new boolean[aggrs.size()];
     for (int i = 0; i < aggrs.size(); i++) {
       AggregationDesc aggr = aggrs.get(i);
-      List<ExprNodeDesc> parameters = aggr.getParameters();
+      ArrayList<ExprNodeDesc> parameters = aggr.getParameters();
       aggregationParameterFields[i] = new ExprNodeEvaluator[parameters.size()];
       aggregationParameterObjectInspectors[i] = new ObjectInspector[parameters
           .size()];
@@ -300,13 +301,29 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
             int tag = Integer.parseInt(name.split("\\:")[1]);
             if (aggr.getDistinct()) {
               // is distinct
-              distinctKeyAggrs.computeIfAbsent(tag, t -> new HashSet<>()).add(i);
+              Set<Integer> set = distinctKeyAggrs.get(tag);
+              if (null == set) {
+                set = new HashSet<Integer>();
+                distinctKeyAggrs.put(tag, set);
+              }
+              if (!set.contains(i)) {
+                set.add(i);
+              }
             } else {
-              nonDistinctKeyAggrs.computeIfAbsent(tag, t -> new HashSet<>()).add(i);
+              Set<Integer> set = nonDistinctKeyAggrs.get(tag);
+              if (null == set) {
+                set = new HashSet<Integer>();
+                nonDistinctKeyAggrs.put(tag, set);
+              }
+              if (!set.contains(i)) {
+                set.add(i);
+              }
             }
           } else {
             // will be KEY._COLx or VALUE._COLx
-            nonDistinctAggrs.add(i);
+            if (!nonDistinctAggrs.contains(i)) {
+              nonDistinctAggrs.add(i);
+            }
           }
         } else {
           if (aggr.getDistinct()) {
@@ -321,7 +338,9 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       }
       if (parameters.size() == 0) {
         // for ex: count(*)
-        nonDistinctAggrs.add(i);
+        if (!nonDistinctAggrs.contains(i)) {
+          nonDistinctAggrs.add(i);
+        }
       }
     }
 
@@ -371,7 +390,8 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
 
       // compare every groupbyMapAggrInterval rows
       numRowsCompareHashAggr = groupbyMapAggrInterval;
-      minReductionHashAggr = conf.getMinReductionHashAggr();
+      minReductionHashAggr = HiveConf.getFloatVar(hconf,
+          HiveConf.ConfVars.HIVEMAPAGGRHASHMINREDUCTION);
     }
 
     List<String> fieldNames = new ArrayList<String>(conf.getOutputColumnNames());
@@ -446,10 +466,10 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
     case DOUBLE:
       return javaSizePrimitiveType;
     case STRING:
-      keyPositionsSize.add(Integer.valueOf(pos));
+      keyPositionsSize.add(new Integer(pos));
       return javaObjectOverHead;
     case BINARY:
-      keyPositionsSize.add(Integer.valueOf(pos));
+      keyPositionsSize.add(new Integer(pos));
       return javaObjectOverHead;
     case TIMESTAMP:
     case TIMESTAMPLOCALTZ:
@@ -480,7 +500,8 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
         || c.isInstance(Short.valueOf((short) 0))
         || c.isInstance(Integer.valueOf(0))
         || c.isInstance(Long.valueOf(0))
-        || c.isInstance(Float.valueOf(0)) || c.isInstance(Double.valueOf(0))) {
+        || c.isInstance(new Float(0))
+        || c.isInstance(new Double(0))) {
       return javaSizePrimitiveType;
     }
 
@@ -523,7 +544,7 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
     // 64 bytes is the overhead for a reference
     fixedRowSize = javaHashEntryOverHead;
 
-    List<ExprNodeDesc> keys = conf.getKeys();
+    ArrayList<ExprNodeDesc> keys = conf.getKeys();
 
     // Go over all the keys and get the size of the fields of fixed length. Keep
     // track of the variable length keys
@@ -720,21 +741,20 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       // if hash aggregation is not behaving properly, disable it
       if (numRowsInput == numRowsCompareHashAggr) {
         numRowsCompareHashAggr += groupbyMapAggrInterval;
-        long numRowsProcessed = groupingSetsPresent ? numRowsInput * groupingSets.size() : numRowsInput;
         // map-side aggregation should reduce the entries by at-least half
-        if (numRowsHashTbl > numRowsProcessed * minReductionHashAggr) {
+        if (numRowsHashTbl > numRowsInput * minReductionHashAggr) {
           LOG.warn("Disable Hash Aggr: #hash table = " + numRowsHashTbl
-              + " #numRowsInput = " + numRowsInput + " reduction = " + 1.0 * (numRowsHashTbl / numRowsProcessed)
-              + " minReduction = " + minReductionHashAggr + " groupingSetsPresent = " + groupingSetsPresent
-              + " numRowsProcessed = " + numRowsProcessed);
+              + " #total = " + numRowsInput + " reduction = " + 1.0
+              * (numRowsHashTbl / numRowsInput) + " minReduction = "
+              + minReductionHashAggr);
           flushHashTable(true);
           hashAggr = false;
         } else {
           if (LOG.isTraceEnabled()) {
-            LOG.trace("Hash Aggr Enabled: #hash table = " + numRowsHashTbl + " #numRowsInput = " + numRowsInput
-                + " reduction = " + 1.0 * (numRowsHashTbl / numRowsProcessed) + " minReduction = "
-                + minReductionHashAggr + " groupingSetsPresent = " + groupingSetsPresent + " numRowsProcessed = "
-                + numRowsProcessed);
+            LOG.trace("Hash Aggr Enabled: #hash table = " + numRowsHashTbl
+                + " #total = " + numRowsInput + " reduction = " + 1.0
+                * (numRowsHashTbl / numRowsInput) + " minReduction = "
+                + minReductionHashAggr);
           }
         }
       }
@@ -747,10 +767,14 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       if (groupingSetsPresent) {
         Object[] newKeysArray = newKeys.getKeyArray();
         Object[] cloneNewKeysArray = new Object[newKeysArray.length];
-        System.arraycopy(newKeysArray, 0, cloneNewKeysArray, 0, groupingSetsPosition);
+        for (int keyPos = 0; keyPos < groupingSetsPosition; keyPos++) {
+          cloneNewKeysArray[keyPos] = newKeysArray[keyPos];
+        }
 
         for (int groupingSetPos = 0; groupingSetPos < groupingSets.size(); groupingSetPos++) {
-          Arrays.fill(newKeysArray, 0, groupingSetsPosition, null);
+          for (int keyPos = 0; keyPos < groupingSetsPosition; keyPos++) {
+            newKeysArray[keyPos] = null;
+          }
 
           FastBitSet bitset = groupingSetsBitSet[groupingSetPos];
           // Some keys need to be left to null corresponding to that grouping set.
@@ -797,7 +821,7 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
 
     // Based on user-specified parameters, check if the hash table needs to be
     // flushed.
-    if (shouldBeFlushed(newKeys)) {
+    if ( shouldBeFlushed(newKeys)) {
       flushHashTable(false);
     }
   }
@@ -843,7 +867,9 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       }
 
       // clear parameters in last-invoke
-      Arrays.fill(aggregationsParametersLastInvoke, 0, aggregationsParametersLastInvoke.length, null);
+      for (int i = 0; i < aggregationsParametersLastInvoke.length; i++) {
+        aggregationsParametersLastInvoke[i] = null;
+      }
     }
 
     aggs = aggregations;
@@ -874,8 +900,12 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       // Assuming the used memory is equally divided among all executors.
       usedMemory = isLlap ? usedMemory / numExecutors : usedMemory;
       rate = (float) usedMemory / (float) maxMemory;
-      if (rate > memoryThreshold) {
-        return (!isTez || numEntriesHashTable != 0);
+      if(rate > memoryThreshold){
+        if (isTez && numEntriesHashTable == 0) {
+          return false;
+        } else {
+          return true;
+        }
       }
       for (Integer pos : keyPositionsSize) {
         Object key = newKeys.getKeyArray()[pos.intValue()];
@@ -918,11 +948,17 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       // Update the number of entries that can fit in the hash table
       numEntriesHashTable =
           (int) (maxHashTblMemory / (fixedRowSize + (totalVariableSize / numEntriesVarSize)));
-      LOG.trace("Hash Aggr: #hash table = {} #max in hash table = {}", numEntries, numEntriesHashTable);
+      if (LOG.isTraceEnabled()) {
+        LOG.trace("Hash Aggr: #hash table = " + numEntries
+            + " #max in hash table = " + numEntriesHashTable);
+      }
     }
 
     // flush if necessary
-    return (numEntries >= numEntriesHashTable);
+    if (numEntries >= numEntriesHashTable) {
+      return true;
+    }
+    return false;
   }
 
   private int estimateSize(AggregationBuffer agg, List<Field> fields) {
@@ -955,17 +991,24 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
     // changed in the future
 
     if (complete) {
-      for (Map.Entry<KeyWrapper, AggregationBuffer[]> entry : hashAggregations.entrySet()) {
-        forward(entry.getKey().getKeyArray(), entry.getValue());
+      Iterator<Map.Entry<KeyWrapper, AggregationBuffer[]>> iter = hashAggregations
+          .entrySet().iterator();
+      while (iter.hasNext()) {
+        Map.Entry<KeyWrapper, AggregationBuffer[]> m = iter.next();
+        forward(m.getKey().getKeyArray(), m.getValue());
       }
+      hashAggregations.clear();
       hashAggregations = null;
-      LOG.info("Hash Table completed flushed");
+      if (LOG.isInfoEnabled()) {
+        LOG.info("Hash Table completed flushed");
+      }
       return;
     }
 
     int oldSize = hashAggregations.size();
-    LOG.info("Hash Tbl flush: #hash table = {}", oldSize);
-
+    if (LOG.isInfoEnabled()) {
+      LOG.info("Hash Tbl flush: #hash table = " + oldSize);
+    }
     Iterator<Map.Entry<KeyWrapper, AggregationBuffer[]>> iter = hashAggregations
         .entrySet().iterator();
     int numDel = 0;
@@ -975,7 +1018,9 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       iter.remove();
       numDel++;
       if (numDel * 10 >= oldSize) {
-        LOG.info("Hash Table flushed: new size = {}", hashAggregations.size());
+        if (LOG.isInfoEnabled()) {
+          LOG.info("Hash Table flushed: new size = " + hashAggregations.size());
+        }
         return;
       }
     }
@@ -995,8 +1040,9 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
       forwardCache = new Object[outputKeyLength + aggs.length];
     }
 
-    System.arraycopy(keys, 0, forwardCache, 0, outputKeyLength);
-
+    for (int i = 0; i < outputKeyLength; i++) {
+      forwardCache[i] = keys[i];
+    }
     for (int i = 0; i < aggs.length; i++) {
       forwardCache[outputKeyLength + i] = aggregationEvaluators[i].evaluate(aggs[i]);
     }
@@ -1012,7 +1058,9 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
   public void flush() throws HiveException{
     try {
       if (hashAggregations != null) {
-        LOG.info("Begin Hash Table flush: size = {}", hashAggregations.size());
+        if (LOG.isInfoEnabled()) {
+          LOG.info("Begin Hash Table flush: size = " + hashAggregations.size());
+        }
         Iterator iter = hashAggregations.entrySet().iterator();
         while (iter.hasNext()) {
           Map.Entry<KeyWrapper, AggregationBuffer[]> m = (Map.Entry) iter
@@ -1051,7 +1099,7 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
         if (firstRow && GroupByOperator.shouldEmitSummaryRow(conf)) {
           firstRow = false;
 
-          Object[] keys = new Object[outputKeyLength];
+          Object[] keys=new Object[outputKeyLength];
           int pos = conf.getGroupingSetPosition();
           if (pos >= 0 && pos < outputKeyLength) {
             keys[pos] = new LongWritable((1L << pos) - 1);
@@ -1072,14 +1120,14 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
   public List<String> genColLists(
       HashMap<Operator<? extends OperatorDesc>, OpParseContext> opParseCtx) {
     List<String> colLists = new ArrayList<String>();
-    List<ExprNodeDesc> keys = conf.getKeys();
+    ArrayList<ExprNodeDesc> keys = conf.getKeys();
     for (ExprNodeDesc key : keys) {
       colLists = Utilities.mergeUniqElems(colLists, key.getCols());
     }
 
-    List<AggregationDesc> aggrs = conf.getAggregators();
+    ArrayList<AggregationDesc> aggrs = conf.getAggregators();
     for (AggregationDesc aggr : aggrs) {
-      List<ExprNodeDesc> params = aggr.getParameters();
+      ArrayList<ExprNodeDesc> params = aggr.getParameters();
       for (ExprNodeDesc param : params) {
         colLists = Utilities.mergeUniqElems(colLists, param.getCols());
       }
@@ -1145,12 +1193,6 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
     if (conf.getGroupingSetPosition() > 0 && shouldEmitSummaryRow(conf)) {
       job.setBoolean(Utilities.ENSURE_OPERATORS_EXECUTED, true);
     }
-  }
-
-  @Override
-  public void replaceTabAlias(String oldAlias, String newAlias) {
-    super.replaceTabAlias(oldAlias, newAlias);
-    ExprNodeDescUtils.replaceTabAlias(getConf().getKeys(), oldAlias, newAlias);
   }
 
 }
