@@ -32,7 +32,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.Path;
@@ -40,7 +39,6 @@ import org.apache.hadoop.hive.common.BlobStorageUtils;
 import org.apache.hadoop.hive.common.StringInternUtils;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.conf.HiveConf.ConfVars;
-import org.apache.hadoop.hive.metastore.api.FieldSchema;
 import org.apache.hadoop.hive.ql.CompilationOpContext;
 import org.apache.hadoop.hive.ql.Context;
 import org.apache.hadoop.hive.ql.exec.ColumnInfo;
@@ -65,9 +63,8 @@ import org.apache.hadoop.hive.ql.exec.UnionOperator;
 import org.apache.hadoop.hive.ql.exec.Utilities;
 import org.apache.hadoop.hive.ql.exec.mr.ExecDriver;
 import org.apache.hadoop.hive.ql.exec.mr.MapRedTask;
-import org.apache.hadoop.hive.ql.exec.tez.TezTask;
+import org.apache.hadoop.hive.ql.exec.spark.SparkTask;
 import org.apache.hadoop.hive.ql.hooks.ReadEntity;
-import org.apache.hadoop.hive.ql.io.AcidUtils;
 import org.apache.hadoop.hive.ql.io.RCFileInputFormat;
 import org.apache.hadoop.hive.ql.io.merge.MergeFileWork;
 import org.apache.hadoop.hive.ql.io.orc.OrcFileStripeMergeInputFormat;
@@ -110,12 +107,14 @@ import org.apache.hadoop.hive.ql.plan.PlanUtils;
 import org.apache.hadoop.hive.ql.plan.RCFileMergeDesc;
 import org.apache.hadoop.hive.ql.plan.ReduceSinkDesc;
 import org.apache.hadoop.hive.ql.plan.ReduceWork;
+import org.apache.hadoop.hive.ql.plan.SparkWork;
 import org.apache.hadoop.hive.ql.plan.StatsWork;
 import org.apache.hadoop.hive.ql.plan.TableDesc;
 import org.apache.hadoop.hive.ql.plan.TableScanDesc;
 import org.apache.hadoop.hive.ql.plan.TezWork;
 import org.apache.hadoop.hive.ql.session.LineageState;
 import org.apache.hadoop.hive.ql.session.SessionState;
+import org.apache.hadoop.hive.serde2.SerDeException;
 import org.apache.hadoop.hive.serde2.objectinspector.StructObjectInspector;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoFactory;
 import org.apache.hadoop.mapred.InputFormat;
@@ -151,9 +150,9 @@ public final class GenMapRedUtils {
     Map<Operator<? extends OperatorDesc>, GenMapRedCtx> mapCurrCtx =
         opProcCtx.getMapCurrCtx();
     GenMapRedCtx mapredCtx = mapCurrCtx.get(op.getParentOperators().get(0));
-    Task<?> currTask = mapredCtx.getCurrTask();
+    Task<? extends Serializable> currTask = mapredCtx.getCurrTask();
     MapredWork plan = (MapredWork) currTask.getWork();
-    HashMap<Operator<? extends OperatorDesc>, Task<?>> opTaskMap =
+    HashMap<Operator<? extends OperatorDesc>, Task<? extends Serializable>> opTaskMap =
         opProcCtx.getOpTaskMap();
     TableScanOperator currTopOp = opProcCtx.getCurrTopOp();
 
@@ -194,11 +193,11 @@ public final class GenMapRedUtils {
    */
   public static void initUnionPlan(ReduceSinkOperator op, UnionOperator currUnionOp,
       GenMRProcContext opProcCtx,
-      Task<?> unionTask) throws SemanticException {
+      Task<? extends Serializable> unionTask) throws SemanticException {
     Operator<? extends OperatorDesc> reducer = op.getChildOperators().get(0);
 
     MapredWork plan = (MapredWork) unionTask.getWork();
-    HashMap<Operator<? extends OperatorDesc>, Task<?>> opTaskMap =
+    HashMap<Operator<? extends OperatorDesc>, Task<? extends Serializable>> opTaskMap =
         opProcCtx.getOpTaskMap();
 
     opTaskMap.put(reducer, unionTask);
@@ -218,7 +217,7 @@ public final class GenMapRedUtils {
   }
 
   private static void setUnionPlan(GenMRProcContext opProcCtx,
-      boolean local, Task<?> currTask, GenMRUnionCtx uCtx,
+      boolean local, Task<? extends Serializable> currTask, GenMRUnionCtx uCtx,
       boolean mergeTask) throws SemanticException {
     TableScanOperator currTopOp = opProcCtx.getCurrTopOp();
 
@@ -264,7 +263,7 @@ public final class GenMapRedUtils {
    * for the union. The plan has already been created.
    */
   public static void initUnionPlan(GenMRProcContext opProcCtx, UnionOperator currUnionOp,
-      Task<?> currTask, boolean local)
+      Task<? extends Serializable> currTask, boolean local)
       throws SemanticException {
     // In case of lateral views followed by a join, the same tree
     // can be traversed more than one
@@ -280,8 +279,8 @@ public final class GenMapRedUtils {
    */
   public static void joinUnionPlan(GenMRProcContext opProcCtx,
       UnionOperator currUnionOp,
-      Task<?> currentUnionTask,
-      Task<?> existingTask, boolean local)
+      Task<? extends Serializable> currentUnionTask,
+      Task<? extends Serializable> existingTask, boolean local)
       throws SemanticException {
     assert currUnionOp != null;
     GenMRUnionCtx uCtx = opProcCtx.getUnionTask(currUnionOp);
@@ -289,7 +288,7 @@ public final class GenMapRedUtils {
 
     setUnionPlan(opProcCtx, local, existingTask, uCtx, true);
 
-    List<Task<?>> parTasks = null;
+    List<Task<? extends Serializable>> parTasks = null;
     if (opProcCtx.getRootTasks().contains(currentUnionTask)) {
       opProcCtx.getRootTasks().remove(currentUnionTask);
       if (!opProcCtx.getRootTasks().contains(existingTask) &&
@@ -300,17 +299,17 @@ public final class GenMapRedUtils {
 
     if ((currentUnionTask != null) && (currentUnionTask.getParentTasks() != null)
         && !currentUnionTask.getParentTasks().isEmpty()) {
-      parTasks = new ArrayList<Task<?>>();
+      parTasks = new ArrayList<Task<? extends Serializable>>();
       parTasks.addAll(currentUnionTask.getParentTasks());
       Object[] parTaskArr = parTasks.toArray();
       for (Object parTask : parTaskArr) {
-        ((Task<?>) parTask)
+        ((Task<? extends Serializable>) parTask)
             .removeDependentTask(currentUnionTask);
       }
     }
 
     if ((currentUnionTask != null) && (parTasks != null)) {
-      for (Task<?> parTask : parTasks) {
+      for (Task<? extends Serializable> parTask : parTasks) {
         parTask.addDependentTask(existingTask);
         if (opProcCtx.getRootTasks().contains(existingTask)) {
           opProcCtx.getRootTasks().remove(existingTask);
@@ -331,22 +330,22 @@ public final class GenMapRedUtils {
    * @param opProcCtx
    *          processing context
    */
-  public static void joinPlan(Task<?> currTask,
-      Task<?> oldTask, GenMRProcContext opProcCtx)
+  public static void joinPlan(Task<? extends Serializable> currTask,
+      Task<? extends Serializable> oldTask, GenMRProcContext opProcCtx)
       throws SemanticException {
     assert currTask != null && oldTask != null;
 
     TableScanOperator currTopOp = opProcCtx.getCurrTopOp();
-    List<Task<?>> parTasks = null;
+    List<Task<? extends Serializable>> parTasks = null;
     // terminate the old task and make current task dependent on it
     if (currTask.getParentTasks() != null
         && !currTask.getParentTasks().isEmpty()) {
-      parTasks = new ArrayList<Task<?>>();
+      parTasks = new ArrayList<Task<? extends Serializable>>();
       parTasks.addAll(currTask.getParentTasks());
 
       Object[] parTaskArr = parTasks.toArray();
       for (Object element : parTaskArr) {
-        ((Task<?>) element).removeDependentTask(currTask);
+        ((Task<? extends Serializable>) element).removeDependentTask(currTask);
       }
     }
 
@@ -355,7 +354,7 @@ public final class GenMapRedUtils {
     }
 
     if (parTasks != null) {
-      for (Task<?> parTask : parTasks) {
+      for (Task<? extends Serializable> parTask : parTasks) {
         parTask.addDependentTask(oldTask);
       }
     }
@@ -373,7 +372,7 @@ public final class GenMapRedUtils {
    * If currTopOp is not set for input of the task, add input for to the task
    */
   static boolean mergeInput(TableScanOperator currTopOp,
-      GenMRProcContext opProcCtx, Task<?> task, boolean local)
+      GenMRProcContext opProcCtx, Task<? extends Serializable> task, boolean local)
       throws SemanticException {
     if (!opProcCtx.isSeenOp(task, currTopOp)) {
       String currAliasId = opProcCtx.getCurrAliasId();
@@ -388,7 +387,7 @@ public final class GenMapRedUtils {
    * Split and link two tasks by temporary file : pRS-FS / TS-cRS-OP
    */
   static void splitPlan(ReduceSinkOperator cRS,
-      Task<?> parentTask, Task<?> childTask,
+      Task<? extends Serializable> parentTask, Task<? extends Serializable> childTask,
       GenMRProcContext opProcCtx) throws SemanticException {
     assert parentTask != null && childTask != null;
     splitTasks(cRS, parentTask, childTask, opProcCtx);
@@ -407,10 +406,10 @@ public final class GenMapRedUtils {
       throws SemanticException {
     // Generate a new task
     ParseContext parseCtx = opProcCtx.getParseCtx();
-    Task<?> parentTask = opProcCtx.getCurrTask();
+    Task<? extends Serializable> parentTask = opProcCtx.getCurrTask();
 
     MapredWork childPlan = getMapRedWork(parseCtx);
-    Task<?> childTask = TaskFactory.get(childPlan);
+    Task<? extends Serializable> childTask = TaskFactory.get(childPlan);
     Operator<? extends OperatorDesc> reducer = cRS.getChildOperators().get(0);
 
     // Add the reducer
@@ -418,7 +417,7 @@ public final class GenMapRedUtils {
     childPlan.setReduceWork(rWork);
     rWork.setReducer(reducer);
     ReduceSinkDesc desc = cRS.getConf();
-    childPlan.getReduceWork().setNumReduceTasks(Integer.valueOf(desc.getNumReducers()));
+    childPlan.getReduceWork().setNumReduceTasks(new Integer(desc.getNumReducers()));
 
     opProcCtx.getOpTaskMap().put(reducer, childTask);
 
@@ -432,8 +431,8 @@ public final class GenMapRedUtils {
    *          current alias
    * @param topOp
    *          the top operator of the stack
-   * @param task
-   *          current task
+   * @param plan
+   *          current plan
    * @param local
    *          whether you need to add to map-reduce or local work
    * @param opProcCtx
@@ -452,8 +451,8 @@ public final class GenMapRedUtils {
    *          current alias
    * @param topOp
    *          the top operator of the stack
-   * @param task
-   *          current task
+   * @param plan
+   *          current plan
    * @param local
    *          whether you need to add to map-reduce or local work
    * @param opProcCtx
@@ -474,11 +473,13 @@ public final class GenMapRedUtils {
    *
    * @param alias_id
    *          current alias
+   * @param topOp
+   *          the top operator of the stack
    * @param plan
    *          map work to initialize
    * @param local
    *          whether you need to add to map-reduce or local work
-   * @param partsList
+   * @param pList
    *          pruned partition list. If it is null it will be computed on-the-fly.
    * @param inputs
    *          read entities for the map work
@@ -519,7 +520,7 @@ public final class GenMapRedUtils {
         aliasPartnDesc = Utilities.getPartitionDesc(parts.iterator().next(), tableSpec);
       }
     } catch (HiveException e) {
-      LOG.error("Failed getPartitionDesc", e);
+      LOG.error(org.apache.hadoop.util.StringUtils.stringifyException(e));
       throw new SemanticException(e.getMessage(), e);
     }
 
@@ -676,7 +677,10 @@ public final class GenMapRedUtils {
         if (p == null) {
           continue;
         }
-        LOG.debug("Adding {} of table {}", p, alias_id);
+        String path = p.toString();
+        if (LOG.isDebugEnabled()) {
+          LOG.debug("Adding " + path + " of table " + alias_id);
+        }
 
         partDir.add(p);
         try {
@@ -687,7 +691,7 @@ public final class GenMapRedUtils {
             partDesc.add(Utilities.getPartitionDescFromTableDesc(tblDesc, part, false));
           }
         } catch (HiveException e) {
-          LOG.error("Failed to add partition description", e);
+          LOG.error(org.apache.hadoop.util.StringUtils.stringifyException(e));
           throw new SemanticException(e.getMessage(), e);
         }
       }
@@ -755,13 +759,13 @@ public final class GenMapRedUtils {
    *          current plan
    * @param local
    *          whether you need to add to map-reduce or local work
-   * @param ttDesc
+   * @param tt_desc
    *          table descriptor
-   * @throws SemanticException
+   * @throws SerDeException
    */
   public static void setTaskPlan(Path path, String alias,
       Operator<? extends OperatorDesc> topOp, MapWork plan, boolean local,
-      TableDesc ttDesc) throws SemanticException {
+      TableDesc tt_desc) throws SemanticException {
 
     if (path == null || alias == null) {
       return;
@@ -770,7 +774,7 @@ public final class GenMapRedUtils {
     if (topOp instanceof TableScanOperator) {
       try {
         Utilities.addSchemaEvolutionToTableScanOperator(
-          (StructObjectInspector) ttDesc.getSerDe().getObjectInspector(),
+          (StructObjectInspector) tt_desc.getDeserializer().getObjectInspector(),
           (TableScanOperator) topOp);
       } catch (Exception e) {
         throw new SemanticException(e);
@@ -779,7 +783,7 @@ public final class GenMapRedUtils {
 
     if (!local) {
       plan.addPathToAlias(path, alias);
-      plan.addPathToPartitionInfo(path, new PartitionDesc(ttDesc, null));
+      plan.addPathToPartitionInfo(path, new PartitionDesc(tt_desc, null));
       plan.getAliasToWork().put(alias, topOp);
     } else {
       // populate local work if needed
@@ -793,7 +797,7 @@ public final class GenMapRedUtils {
       assert localPlan.getAliasToWork().get(alias) == null;
       assert localPlan.getAliasToFetchWork().get(alias) == null;
       localPlan.getAliasToWork().put(alias, topOp);
-      localPlan.getAliasToFetchWork().put(alias, new FetchWork(new Path(alias), ttDesc));
+      localPlan.getAliasToFetchWork().put(alias, new FetchWork(new Path(alias), tt_desc));
       plan.setMapRedLocalWork(localPlan);
     }
   }
@@ -846,18 +850,19 @@ public final class GenMapRedUtils {
    *
    * @param task
    */
-  public static void setKeyAndValueDescForTaskTree(Task<?> task) {
+  public static void setKeyAndValueDescForTaskTree(Task<? extends Serializable> task) {
 
     if (task instanceof ConditionalTask) {
-      List<Task<?>> listTasks = ((ConditionalTask) task)
+      List<Task<? extends Serializable>> listTasks = ((ConditionalTask) task)
           .getListTasks();
-      for (Task<?> tsk : listTasks) {
+      for (Task<? extends Serializable> tsk : listTasks) {
         setKeyAndValueDescForTaskTree(tsk);
       }
     } else if (task instanceof ExecDriver) {
       MapredWork work = (MapredWork) task.getWork();
       work.getMapWork().deriveExplainAttributes();
-      Map<String, Operator<? extends OperatorDesc>> opMap = work.getMapWork().getAliasToWork();
+      HashMap<String, Operator<? extends OperatorDesc>> opMap = work
+          .getMapWork().getAliasToWork();
       if (opMap != null && !opMap.isEmpty()) {
         for (Operator<? extends OperatorDesc> op : opMap.values()) {
           setKeyAndValueDesc(work.getReduceWork(), op);
@@ -870,66 +875,83 @@ public final class GenMapRedUtils {
           ((MapWork)w).deriveExplainAttributes();
         }
       }
+    } else if (task instanceof SparkTask) {
+      SparkWork work = (SparkWork) task.getWork();
+      for (BaseWork w : work.getAllWorkUnsorted()) {
+        if (w instanceof MapWork) {
+          ((MapWork) w).deriveExplainAttributes();
+        }
+      }
     }
 
     if (task.getChildTasks() == null) {
       return;
     }
 
-    for (Task<?> childTask : task.getChildTasks()) {
+    for (Task<? extends Serializable> childTask : task.getChildTasks()) {
       setKeyAndValueDescForTaskTree(childTask);
     }
   }
 
   /**
-   * Called at the end of TaskCompiler::compile
-   * This currently does the following for each map work
-   *   1.  Intern the table descriptors of the partitions
-   *   2.  derive final explain attributes based on previous compilation.
-   *
-   * The original implementation had 2 functions internTableDesc and deriveFinalExplainAttributes,
-   * respectively implementing 1 and 2 mentioned above.  This was done using recursion over the
-   * task graph.  The recursion was inefficient in a couple of ways.
-   *   - For large graphs the recursion was filling up the stack
-   *   - Instead of finding the mapworks, it was walking all possible paths from root
-   *     causing a huge performance problem.
-   *
-   * This implementation combines internTableDesc and deriveFinalExplainAttributes into 1 call.
-   * This can be done because each refers to information within Map Work and performs a specific
-   * action.
-   *
-   * The revised implementation generates all the map works from all MapReduce tasks (getMRTasks)
-   * and Tez tasks (getTezTasks).  Then for each of those map works
-   * invokes the respective call.  getMRTasks and getTezTasks iteratively walks
-   * the task graph to find the respective map works.
-   *
-   * The iterative implementation of these functions was done as part of HIVE-17195.  Before
-   * HIVE-17195, these functions were recursive and had the same issue.  So, picking this patch
-   * for an older release will also require picking HIVE-17195 at the least.
+   * Called at the end of TaskCompiler::compile to derive final
+   * explain attributes based on previous compilation.
    */
-  public static void finalMapWorkChores(
-      List<Task<?>> tasks, Configuration conf,
-      Interner<TableDesc> interner) {
-    List<ExecDriver> mrTasks = Utilities.getMRTasks(tasks);
-    if (!mrTasks.isEmpty()) {
-      for (ExecDriver execDriver : mrTasks) {
-        execDriver.getWork().getMapWork().internTable(interner);
-        execDriver.getWork().getMapWork().deriveLlap(conf, true);
+  public static void deriveFinalExplainAttributes(
+      Task<? extends Serializable> task, Configuration conf) {
+    // TODO: deriveExplainAttributes should be called here, code is too fragile to move it around.
+    if (task instanceof ConditionalTask) {
+      for (Task<? extends Serializable> tsk : ((ConditionalTask) task).getListTasks()) {
+        deriveFinalExplainAttributes(tsk, conf);
+      }
+    } else if (task instanceof ExecDriver) {
+      MapredWork work = (MapredWork) task.getWork();
+      work.getMapWork().deriveLlap(conf, true);
+    } else if (task != null && (task.getWork() instanceof TezWork)) {
+      TezWork work = (TezWork)task.getWork();
+      for (BaseWork w : work.getAllWorkUnsorted()) {
+        if (w instanceof MapWork) {
+          ((MapWork)w).deriveLlap(conf, false);
+        }
+      }
+    } else if (task instanceof SparkTask) {
+      SparkWork work = (SparkWork) task.getWork();
+      for (BaseWork w : work.getAllWorkUnsorted()) {
+        if (w instanceof MapWork) {
+          ((MapWork) w).deriveLlap(conf, false);
+        }
       }
     }
 
-    List<TezTask> tezTasks = Utilities.getTezTasks(tasks);
-    if (!tezTasks.isEmpty()) {
-      for (TezTask tezTask : tezTasks) {
-        if (tezTask.getWork() instanceof TezWork) {
-          TezWork work = tezTask.getWork();
-          for (BaseWork w : work.getAllWorkUnsorted()) {
-            if (w instanceof MapWork) {
-              ((MapWork)w).internTable(interner);
-              ((MapWork)w).deriveLlap(conf, false);
-            }
-          }
+    if (task.getChildTasks() == null) {
+      return;
+    }
+
+    for (Task<? extends Serializable> childTask : task.getChildTasks()) {
+      deriveFinalExplainAttributes(childTask, conf);
+    }
+  }
+
+  public static void internTableDesc(Task<?> task, Interner<TableDesc> interner) {
+
+    if (task instanceof ConditionalTask) {
+      for (Task tsk : ((ConditionalTask) task).getListTasks()) {
+        internTableDesc(tsk, interner);
+      }
+    } else if (task instanceof ExecDriver) {
+      MapredWork work = (MapredWork) task.getWork();
+      work.getMapWork().internTable(interner);
+    } else if (task != null && (task.getWork() instanceof TezWork)) {
+      TezWork work = (TezWork)task.getWork();
+      for (BaseWork w : work.getAllWorkUnsorted()) {
+        if (w instanceof MapWork) {
+          ((MapWork)w).internTable(interner);
         }
+      }
+    }
+    if (task.getNumChild() > 0) {
+      for (Task childTask : task.getChildTasks()) {
+        internTableDesc(childTask, interner);
       }
     }
   }
@@ -959,7 +981,7 @@ public final class GenMapRedUtils {
         conf.getBoolVar(
             HiveConf.ConfVars.HIVE_MAPPER_CANNOT_SPAN_MULTIPLE_PARTITIONS);
     work.setMapperCannotSpanPartns(mapperCannotSpanPartns);
-    work.setPathToAliases(new LinkedHashMap<Path, List<String>>());
+    work.setPathToAliases(new LinkedHashMap<Path, ArrayList<String>>());
     work.setPathToPartitionInfo(new LinkedHashMap<Path, PartitionDesc>());
     work.setAliasToWork(new LinkedHashMap<String, Operator<? extends OperatorDesc>>());
     return mrWork;
@@ -1038,7 +1060,7 @@ public final class GenMapRedUtils {
    * @param opProcCtx context
    **/
   private static void splitTasks(ReduceSinkOperator op,
-      Task<?> parentTask, Task<?> childTask,
+      Task<? extends Serializable> parentTask, Task<? extends Serializable> childTask,
       GenMRProcContext opProcCtx) throws SemanticException {
     if (op.getNumParent() != 1) {
       throw new IllegalStateException("Expecting operator " + op + " to have one parent. " +
@@ -1050,7 +1072,7 @@ public final class GenMapRedUtils {
 
     // Root Task cannot depend on any other task, therefore childTask cannot be
     // a root Task
-    List<Task<?>> rootTasks = opProcCtx.getRootTasks();
+    List<Task<? extends Serializable>> rootTasks = opProcCtx.getRootTasks();
     if (rootTasks.contains(childTask)) {
       rootTasks.remove(childTask);
     }
@@ -1138,13 +1160,13 @@ public final class GenMapRedUtils {
    */
   public static void replaceMapWork(String sourceAlias, String targetAlias,
       MapWork source, MapWork target) {
-    Map<Path, List<String>> sourcePathToAliases = source.getPathToAliases();
+    Map<Path, ArrayList<String>> sourcePathToAliases = source.getPathToAliases();
     Map<Path, PartitionDesc> sourcePathToPartitionInfo = source.getPathToPartitionInfo();
     Map<String, Operator<? extends OperatorDesc>> sourceAliasToWork = source.getAliasToWork();
     Map<String, PartitionDesc> sourceAliasToPartnInfo = source.getAliasToPartnInfo();
 
-    Map<Path, List<String>> targetPathToAliases = target.getPathToAliases();
-    Map<Path, PartitionDesc> targetPathToPartitionInfo = target.getPathToPartitionInfo();
+    LinkedHashMap<Path, ArrayList<String>> targetPathToAliases = target.getPathToAliases();
+    LinkedHashMap<Path, PartitionDesc> targetPathToPartitionInfo = target.getPathToPartitionInfo();
     Map<String, Operator<? extends OperatorDesc>> targetAliasToWork = target.getAliasToWork();
     Map<String, PartitionDesc> targetAliasToPartnInfo = target.getAliasToPartnInfo();
 
@@ -1166,8 +1188,8 @@ public final class GenMapRedUtils {
     targetAliasToWork.remove(targetAlias);
     targetAliasToPartnInfo.remove(targetAlias);
     List<Path> pathsToRemove = new ArrayList<>();
-    for (Entry<Path, List<String>> entry: targetPathToAliases.entrySet()) {
-      List<String> aliases = entry.getValue();
+    for (Entry<Path, ArrayList<String>> entry: targetPathToAliases.entrySet()) {
+      ArrayList<String> aliases = entry.getValue();
       aliases.remove(targetAlias);
       if (aliases.isEmpty()) {
         pathsToRemove.add(entry.getKey());
@@ -1183,8 +1205,8 @@ public final class GenMapRedUtils {
     targetAliasToPartnInfo.putAll(sourceAliasToPartnInfo);
     targetPathToPartitionInfo.putAll(sourcePathToPartitionInfo);
     List<Path> pathsToAdd = new ArrayList<>();
-    for (Entry<Path, List<String>> entry: sourcePathToAliases.entrySet()) {
-      List<String> aliases = entry.getValue();
+    for (Entry<Path, ArrayList<String>> entry: sourcePathToAliases.entrySet()) {
+      ArrayList<String> aliases = entry.getValue();
       if (aliases.contains(sourceAlias)) {
         pathsToAdd.add(entry.getKey());
       }
@@ -1226,11 +1248,11 @@ public final class GenMapRedUtils {
    *          v
    *          FileSinkOperator (fsMerge)
    *
-   *          Here the pathToPartitionInfo &amp; pathToAlias will remain the same, which means the paths
+   *          Here the pathToPartitionInfo & pathToAlias will remain the same, which means the paths
    *          do
    *          not contain the dynamic partitions (their parent). So after the dynamic partitions are
    *          created (after the first job finished before the moveTask or ConditionalTask start),
-   *          we need to change the pathToPartitionInfo &amp; pathToAlias to include the dynamic
+   *          we need to change the pathToPartitionInfo & pathToAlias to include the dynamic
    *          partition
    *          directories.
    *
@@ -1238,7 +1260,7 @@ public final class GenMapRedUtils {
   public static void createMRWorkForMergingFiles(FileSinkOperator fsInput,
       Path finalName, DependencyCollectionTask dependencyTask,
       List<Task<MoveWork>> mvTasks, HiveConf conf,
-      Task<?> currTask, LineageState lineageState)
+      Task<? extends Serializable> currTask, LineageState lineageState)
       throws SemanticException {
 
     //
@@ -1281,7 +1303,7 @@ public final class GenMapRedUtils {
     DynamicPartitionCtx dpCtx = fsInputDesc.getDynPartCtx();
     if (dpCtx != null && dpCtx.getNumDPCols() > 0) {
       // adding DP ColumnInfo to the RowSchema signature
-      List<ColumnInfo> signature = inputRS.getSignature();
+      ArrayList<ColumnInfo> signature = inputRS.getSignature();
       String tblAlias = fsInputDesc.getTableInfo().getTableName();
       for (String dpCol : dpCtx.getDPColNames()) {
         ColumnInfo colInfo = new ColumnInfo(dpCol,
@@ -1298,7 +1320,7 @@ public final class GenMapRedUtils {
       }
 
       // update the FileSinkOperator to include partition columns
-      usePartitionColumns(fsInputDesc.getTableInfo().getProperties(), fsInputDesc.getTable(), dpCtx.getDPColNames());
+      usePartitionColumns(fsInputDesc.getTableInfo().getProperties(), dpCtx.getDPColNames());
     } else {
       // non-partitioned table
       fsInputDesc.getTableInfo().getProperties().remove(
@@ -1319,6 +1341,10 @@ public final class GenMapRedUtils {
         work = new TezWork(conf.getVar(HiveConf.ConfVars.HIVEQUERYID), conf);
         cplan.setName("File Merge");
         ((TezWork) work).add(cplan);
+      } else if (conf.getVar(ConfVars.HIVE_EXECUTION_ENGINE).equals("spark")) {
+        work = new SparkWork(conf.getVar(HiveConf.ConfVars.HIVEQUERYID));
+        cplan.setName("Spark Merge File Work");
+        ((SparkWork) work).add(cplan);
       } else {
         work = cplan;
       }
@@ -1328,6 +1354,10 @@ public final class GenMapRedUtils {
         work = new TezWork(conf.getVar(HiveConf.ConfVars.HIVEQUERYID), conf);
         cplan.setName("File Merge");
         ((TezWork)work).add(cplan);
+      } else if (conf.getVar(ConfVars.HIVE_EXECUTION_ENGINE).equals("spark")) {
+        work = new SparkWork(conf.getVar(HiveConf.ConfVars.HIVEQUERYID));
+        cplan.setName("Spark Merge File Work");
+        ((SparkWork) work).add(cplan);
       } else {
         work = new MapredWork();
         ((MapredWork)work).setMapWork(cplan);
@@ -1349,8 +1379,8 @@ public final class GenMapRedUtils {
     // concatenate. Keeping the old logic for non-MM tables with temp directories and stuff.
     Path fsopPath = srcMmWriteId != null ? fsInputDesc.getFinalDirName() : finalName;
 
-    Task<MoveWork> mvTask = GenMapRedUtils.findMoveTaskForFsopOutput(mvTasks, fsopPath, fsInputDesc.isMmTable(),
-        fsInputDesc.isDirectInsert(), fsInputDesc.getMoveTaskId(), fsInputDesc.getAcidOperation());
+    Task<MoveWork> mvTask = GenMapRedUtils.findMoveTaskForFsopOutput(
+        mvTasks, fsopPath, fsInputDesc.isMmTable());
     ConditionalTask cndTsk = GenMapRedUtils.createCondTask(conf, currTask, dummyMv, work,
         fsInputDesc.getMergeInputDirName(), finalName, mvTask, dependencyTask, lineageState);
 
@@ -1372,7 +1402,7 @@ public final class GenMapRedUtils {
    * @param dependencyTask
    */
   private static void linkMoveTask(Task<MoveWork> mvTask,
-      Task<?> task, HiveConf hconf,
+      Task<? extends Serializable> task, HiveConf hconf,
       DependencyCollectionTask dependencyTask) {
 
     if (task.getDependentTasks() == null || task.getDependentTasks().isEmpty()) {
@@ -1380,7 +1410,7 @@ public final class GenMapRedUtils {
       addDependentMoveTasks(mvTask, hconf, task, dependencyTask);
     } else {
       // Otherwise, for each child run this method recursively
-      for (Task<?> childTask : task.getDependentTasks()) {
+      for (Task<? extends Serializable> childTask : task.getDependentTasks()) {
         linkMoveTask(mvTask, childTask, hconf, dependencyTask);
       }
     }
@@ -1398,7 +1428,7 @@ public final class GenMapRedUtils {
    * @param dependencyTask
    */
   public static void addDependentMoveTasks(Task<MoveWork> mvTask, HiveConf hconf,
-      Task<?> parentTask, DependencyCollectionTask dependencyTask) {
+      Task<? extends Serializable> parentTask, DependencyCollectionTask dependencyTask) {
 
     if (mvTask != null) {
       if (dependencyTask != null) {
@@ -1451,7 +1481,7 @@ public final class GenMapRedUtils {
    *          HiveConf
    */
   public static void addStatsTask(FileSinkOperator nd, MoveTask mvTask,
-      Task<?> currTask, HiveConf hconf) {
+      Task<? extends Serializable> currTask, HiveConf hconf) {
 
     MoveWork mvWork = mvTask.getWork();
     BasicStatsWork statsWork = null;
@@ -1459,15 +1489,10 @@ public final class GenMapRedUtils {
     boolean truncate = false;
     if (mvWork.getLoadTableWork() != null) {
       statsWork = new BasicStatsWork(mvWork.getLoadTableWork());
-      truncate = mvWork.getLoadTableWork().getReplace();
       String tableName = mvWork.getLoadTableWork().getTable().getTableName();
+      truncate = mvWork.getLoadTableWork().getReplace();
       try {
-        // For partitioned CTAS, the table has not been created, but we can retrieve it
-        // from the loadTableWork. For rest of query types, we just retrieve it from
-        // metastore.
-        table = mvWork.getLoadTableWork().getMdTable() != null ?
-            mvWork.getLoadTableWork().getMdTable() :
-            Hive.get().getTable(SessionState.get().getCurrentDatabase(), tableName);
+        table = Hive.get().getTable(SessionState.get().getCurrentDatabase(), tableName);
       } catch (HiveException e) {
         throw new RuntimeException("unexpected; table should be present already..: " + tableName, e);
       }
@@ -1502,6 +1527,11 @@ public final class GenMapRedUtils {
       if (mrWork.getReduceWork() != null) {
         mrWork.getReduceWork().setGatheringStats(true);
       }
+    } else if (currTask.getWork() instanceof SparkWork) {
+      SparkWork work = (SparkWork) currTask.getWork();
+      for (BaseWork w: work.getAllWork()) {
+        w.setGatheringStats(true);
+      }
     } else { // must be TezWork
       TezWork work = (TezWork) currTask.getWork();
       for (BaseWork w: work.getAllWork()) {
@@ -1515,7 +1545,7 @@ public final class GenMapRedUtils {
     columnStatsWork.truncateExisting(truncate);
 
     columnStatsWork.setSourceTask(currTask);
-    Task<?> statsTask = TaskFactory.get(columnStatsWork);
+    Task<? extends Serializable> statsTask = TaskFactory.get(columnStatsWork);
 
     // subscribe feeds from the MoveTask so that MoveTask can forward the list
     // of dynamic partition list to the StatsTask
@@ -1575,8 +1605,8 @@ public final class GenMapRedUtils {
    *
    * @param fsInputDesc
    * @param finalName
-   * @param hasDynamicPartitions
    * @param ctx
+   * @param inputFormatClass
    * @return MergeWork if table is stored as RCFile or ORCFile,
    *         null otherwise
    */
@@ -1614,7 +1644,7 @@ public final class GenMapRedUtils {
     // create the merge file work
     MergeFileWork work = new MergeFileWork(inputDirs, finalName,
         hasDynamicPartitions, tblDesc.getInputFileFormatClass().getName(), tblDesc);
-    Map<Path, List<String>> pathToAliases = new LinkedHashMap<>();
+    LinkedHashMap<Path, ArrayList<String>> pathToAliases = new LinkedHashMap<>();
     pathToAliases.put(inputDir, inputDirstr);
     work.setMapperCannotSpanPartns(true);
     work.setPathToAliases(pathToAliases);
@@ -1634,8 +1664,6 @@ public final class GenMapRedUtils {
       fmd = new OrcFileMergeDesc();
     }
     fmd.setIsMmTable(fsInputDesc.isMmTable());
-    boolean isCompactionTable = AcidUtils.isCompactionTable(tblDesc.getProperties());
-    fmd.setIsCompactionTable(isCompactionTable);
     fmd.setWriteId(fsInputDesc.getTableWriteId());
     int stmtId = fsInputDesc.getStatementId();
     fmd.setStmtId(stmtId == -1 ? 0 : stmtId);
@@ -1745,7 +1773,7 @@ public final class GenMapRedUtils {
    */
   @SuppressWarnings("unchecked")
   private static ConditionalTask createCondTask(HiveConf conf,
-      Task<?> currTask, MoveWork mvWork, Serializable mergeWork,
+      Task<? extends Serializable> currTask, MoveWork mvWork, Serializable mergeWork,
       Path condInputPath, Path condOutputPath, Task<MoveWork> moveTaskToLink,
       DependencyCollectionTask dependencyTask, LineageState lineageState) {
     if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
@@ -1772,10 +1800,10 @@ public final class GenMapRedUtils {
     // conflicts.
     // TODO: if we are not dealing with concatenate DDL, we should not create a merge+move path
     //       because it should be impossible to get incompatible outputs.
-    Task<?> mergeOnlyMergeTask = TaskFactory.get(mergeWork);
-    Task<?> moveOnlyMoveTask = TaskFactory.get(workForMoveOnlyTask);
-    Task<?> mergeAndMoveMergeTask = TaskFactory.get(mergeWork);
-    Task<?> mergeAndMoveMoveTask = TaskFactory.get(moveWork);
+    Task<? extends Serializable> mergeOnlyMergeTask = TaskFactory.get(mergeWork);
+    Task<? extends Serializable> moveOnlyMoveTask = TaskFactory.get(workForMoveOnlyTask);
+    Task<? extends Serializable> mergeAndMoveMergeTask = TaskFactory.get(mergeWork);
+    Task<? extends Serializable> mergeAndMoveMoveTask = TaskFactory.get(moveWork);
 
     // NOTE! It is necessary merge task is the parent of the move task, and not
     // the other way around, for the proper execution of the execute method of
@@ -1788,7 +1816,7 @@ public final class GenMapRedUtils {
 
     ConditionalWork cndWork = new ConditionalWork(listWorks);
 
-    List<Task<?>> listTasks = new ArrayList<Task<?>>();
+    List<Task<? extends Serializable>> listTasks = new ArrayList<Task<? extends Serializable>>();
     listTasks.add(moveOnlyMoveTask);
     listTasks.add(mergeOnlyMergeTask);
     listTasks.add(mergeAndMoveMergeTask);
@@ -1834,27 +1862,21 @@ public final class GenMapRedUtils {
         .isSkewedStoredAsDir();
   }
 
-  public static Task<MoveWork> findMoveTaskForFsopOutput(List<Task<MoveWork>> mvTasks, Path fsopFinalDir,
-      boolean isMmFsop, boolean isDirectInsert, String fsoMoveTaskId, AcidUtils.Operation acidOperation) {
+  public static Task<MoveWork> findMoveTaskForFsopOutput(
+      List<Task<MoveWork>> mvTasks, Path fsopFinalDir, boolean isMmFsop) {
     // find the move task
     for (Task<MoveWork> mvTsk : mvTasks) {
       MoveWork mvWork = mvTsk.getWork();
       Path srcDir = null;
       boolean isLfd = false;
-      String moveTaskId = null;
-      AcidUtils.Operation moveTaskWriteType = null;
       if (mvWork.getLoadFileWork() != null) {
         srcDir = mvWork.getLoadFileWork().getSourcePath();
         isLfd = true;
-        if (isMmFsop || isDirectInsert) {
+        if (isMmFsop) {
           srcDir = srcDir.getParent();
         }
-        moveTaskId = mvWork.getLoadFileWork().getMoveTaskId();
-        moveTaskWriteType = mvWork.getLoadFileWork().getWriteType();
       } else if (mvWork.getLoadTableWork() != null) {
         srcDir = mvWork.getLoadTableWork().getSourcePath();
-        moveTaskId = mvWork.getLoadTableWork().getMoveTaskId();
-        moveTaskWriteType = mvWork.getLoadTableWork().getWriteType();
       }
       if (Utilities.FILE_OP_LOGGER.isTraceEnabled()) {
         Utilities.FILE_OP_LOGGER.trace("Observing MoveWork " + System.identityHashCode(mvWork)
@@ -1863,16 +1885,7 @@ public final class GenMapRedUtils {
       }
 
       if ((srcDir != null) && srcDir.equals(fsopFinalDir)) {
-        if (isDirectInsert || isMmFsop) {
-          if (moveTaskId.equals(fsoMoveTaskId)) {
-            // If the ACID direct insert is on, the MoveTasks cannot be identified by the srcDir as
-            // in this case the srcDir is always the root directory of the table.
-            // We need to consider the ACID write type to identify the MoveTasks.
-            return mvTsk;
-          }
-        } else {
-          return mvTsk;
-        }
+        return mvTsk;
       }
     }
     return null;
@@ -1882,7 +1895,7 @@ public final class GenMapRedUtils {
    * Returns true iff the fsOp requires a merge
    */
   public static boolean isMergeRequired(List<Task<MoveWork>> mvTasks, HiveConf hconf,
-      FileSinkOperator fsOp, Task<?> currTask, boolean isInsertTable) {
+      FileSinkOperator fsOp, Task<? extends Serializable> currTask, boolean isInsertTable) {
     // Has the user enabled merging of files for map-only jobs or for all jobs
     if (mvTasks == null  || mvTasks.isEmpty()) {
       return false;
@@ -1890,16 +1903,16 @@ public final class GenMapRedUtils {
 
     // no need of merging if the move is to a local file system
     // We are looking based on the original FSOP, so use the original path as is.
-    MoveTask mvTask = (MoveTask) GenMapRedUtils.findMoveTaskForFsopOutput(mvTasks, fsOp.getConf().getFinalDirName(),
-        fsOp.getConf().isMmTable(), fsOp.getConf().isDirectInsert(), fsOp.getConf().getMoveTaskId(), fsOp.getConf().getAcidOperation());
+    MoveTask mvTask = (MoveTask) GenMapRedUtils.findMoveTaskForFsopOutput(
+        mvTasks, fsOp.getConf().getFinalDirName(), fsOp.getConf().isMmTable());
 
     // TODO: wtf?!! why is this in this method? This has nothing to do with anything.
-    if (isInsertTable && hconf.getBoolVar(ConfVars.HIVESTATSAUTOGATHER)
+    if (mvTask != null && isInsertTable && hconf.getBoolVar(ConfVars.HIVESTATSAUTOGATHER)
         && !fsOp.getConf().isMaterialization()) {
       // mark the MapredWork and FileSinkOperator for gathering stats
       fsOp.getConf().setGatherStats(true);
       fsOp.getConf().setStatsReliable(hconf.getBoolVar(ConfVars.HIVE_STATS_RELIABLE));
-      if (mvTask != null && !mvTask.hasFollowingStatsTask()) {
+      if (!mvTask.hasFollowingStatsTask()) {
         GenMapRedUtils.addStatsTask(fsOp, mvTask, currTask, hconf);
       }
     }
@@ -1911,17 +1924,20 @@ public final class GenMapRedUtils {
     if (currTask.getWork() instanceof TezWork) {
       // tez blurs the boundary between map and reduce, thus it has it's own config
       return hconf.getBoolVar(ConfVars.HIVEMERGETEZFILES);
+    } else if (currTask.getWork() instanceof SparkWork) {
+      // spark has its own config for merging
+      return hconf.getBoolVar(ConfVars.HIVEMERGESPARKFILES);
     }
     return isMergeRequiredForMr(hconf, fsOp, currTask);
   }
 
   private static boolean isMergeRequiredForMr(HiveConf hconf,
-      FileSinkOperator fsOp, Task<?> currTask) {
+      FileSinkOperator fsOp, Task<? extends Serializable> currTask) {
     if (fsOp.getConf().isLinkedFileSink()) {
       // If the user has HIVEMERGEMAPREDFILES set to false, the idea was the
       // number of reducers are few, so the number of files anyway are small.
       // However, with this optimization, we are increasing the number of files
-      // possibly by a big margin. So, merge aggressively.
+      // possibly by a big margin. So, merge aggresively.
       return (hconf.getBoolVar(ConfVars.HIVEMERGEMAPFILES) ||
           hconf.getBoolVar(ConfVars.HIVEMERGEMAPREDFILES));
     }
@@ -1954,7 +1970,7 @@ public final class GenMapRedUtils {
    * @param dependencyTask
    * @return
    */
-  public static Path createMoveTask(Task<?> currTask, boolean chDir,
+  public static Path createMoveTask(Task<? extends Serializable> currTask, boolean chDir,
       FileSinkOperator fsOp, ParseContext parseCtx, List<Task<MoveWork>> mvTasks,
       HiveConf hconf, DependencyCollectionTask dependencyTask) {
 
@@ -1962,15 +1978,9 @@ public final class GenMapRedUtils {
 
     FileSinkDesc fileSinkDesc = fsOp.getConf();
     boolean isMmTable = fileSinkDesc.isMmTable();
-    boolean isDirectInsert = fileSinkDesc.isDirectInsert();
     if (chDir) {
       dest = fileSinkDesc.getMergeInputDirName();
-      /**
-       * Skip temporary file generation for:
-       * 1. MM Tables
-       * 2. INSERT operation on full ACID table
-       */
-      if (!isMmTable && !isDirectInsert) {
+      if (!isMmTable) {
         // generate the temporary file
         // it must be on the same file system as the current destination
         Context baseCtx = parseCtx.getContext();
@@ -2001,8 +2011,8 @@ public final class GenMapRedUtils {
     Task<MoveWork> mvTask = null;
 
     if (!chDir) {
-      mvTask = GenMapRedUtils.findMoveTaskForFsopOutput(mvTasks, fsOp.getConf().getFinalDirName(), isMmTable,
-          isDirectInsert, fsOp.getConf().getMoveTaskId(), fsOp.getConf().getAcidOperation());
+      mvTask = GenMapRedUtils.findMoveTaskForFsopOutput(
+          mvTasks, fsOp.getConf().getFinalDirName(), fsOp.getConf().isMmTable());
     }
 
     // Set the move task to be dependent on the current task
@@ -2071,23 +2081,6 @@ public final class GenMapRedUtils {
     }
     return null;
   }
-
-  static void usePartitionColumns(Properties properties, Table table, List<String> partColNames) {
-    if (properties.containsKey(org.apache.hadoop.hive.metastore.api.hive_metastoreConstants.META_TABLE_PARTITION_COLUMNS)) {
-      usePartitionColumns(properties, partColNames);
-    } else {
-      List<FieldSchema> partCols = table.getPartCols();
-      String partNames = partCols.stream().map(FieldSchema::getName).collect(Collectors.joining("/"));
-      String partTypes = partCols.stream().map(FieldSchema::getType).collect(Collectors.joining(":"));
-      properties.setProperty(
-        org.apache.hadoop.hive.metastore.api.hive_metastoreConstants.META_TABLE_PARTITION_COLUMNS,
-        partNames);
-      properties.setProperty(
-        org.apache.hadoop.hive.metastore.api.hive_metastoreConstants.META_TABLE_PARTITION_COLUMN_TYPES,
-        partTypes);
-    }
-  }
-
   /**
    * Uses only specified partition columns.
    * Provided properties should be pre-populated with partition column names and types.
