@@ -24,6 +24,7 @@ import static org.apache.hadoop.hive.ql.optimizer.physical.LlapDecider.LlapMode.
 import static org.apache.hadoop.hive.ql.optimizer.physical.LlapDecider.LlapMode.map;
 import static org.apache.hadoop.hive.ql.optimizer.physical.LlapDecider.LlapMode.none;
 
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Deque;
@@ -52,12 +53,12 @@ import org.apache.hadoop.hive.ql.exec.tez.TezTask;
 import org.apache.hadoop.hive.ql.io.HiveInputFormat;
 import org.apache.hadoop.hive.ql.lib.DefaultGraphWalker;
 import org.apache.hadoop.hive.ql.lib.DefaultRuleDispatcher;
-import org.apache.hadoop.hive.ql.lib.SemanticDispatcher;
-import org.apache.hadoop.hive.ql.lib.SemanticGraphWalker;
+import org.apache.hadoop.hive.ql.lib.Dispatcher;
+import org.apache.hadoop.hive.ql.lib.GraphWalker;
 import org.apache.hadoop.hive.ql.lib.Node;
-import org.apache.hadoop.hive.ql.lib.SemanticNodeProcessor;
+import org.apache.hadoop.hive.ql.lib.NodeProcessor;
 import org.apache.hadoop.hive.ql.lib.NodeProcessorCtx;
-import org.apache.hadoop.hive.ql.lib.SemanticRule;
+import org.apache.hadoop.hive.ql.lib.Rule;
 import org.apache.hadoop.hive.ql.lib.RuleRegExp;
 import org.apache.hadoop.hive.ql.lib.TaskGraphWalker;
 import org.apache.hadoop.hive.ql.parse.SemanticException;
@@ -72,6 +73,7 @@ import org.apache.hadoop.hive.ql.plan.ReduceWork;
 import org.apache.hadoop.hive.ql.plan.SelectDesc;
 import org.apache.hadoop.hive.ql.plan.Statistics;
 import org.apache.hadoop.hive.ql.plan.TezWork;
+import org.apache.hadoop.util.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -110,7 +112,7 @@ public class LlapDecider implements PhysicalPlanResolver {
   }
 
 
-  class LlapDecisionDispatcher implements SemanticDispatcher {
+  class LlapDecisionDispatcher implements Dispatcher {
     private final HiveConf conf;
     private final boolean doSkipUdfCheck;
     private final boolean arePermanentFnsAllowed;
@@ -118,7 +120,7 @@ public class LlapDecider implements PhysicalPlanResolver {
     private final float minReducersPerExec;
     private final int executorsPerNode;
     private List<MapJoinOperator> mapJoinOpList;
-    private final Map<SemanticRule, SemanticNodeProcessor> rules;
+    private final Map<Rule, NodeProcessor> rules;
 
     public LlapDecisionDispatcher(PhysicalContext pctx, LlapMode mode) {
       conf = pctx.getConf();
@@ -137,7 +139,7 @@ public class LlapDecider implements PhysicalPlanResolver {
     public Object dispatch(Node nd, Stack<Node> stack, Object... nodeOutputs)
       throws SemanticException {
       @SuppressWarnings("unchecked")
-      Task<?> currTask = (Task<?>) nd;
+      Task<? extends Serializable> currTask = (Task<? extends Serializable>) nd;
       if (currTask instanceof TezTask) {
         TezWork work = ((TezTask) currTask).getWork();
         for (BaseWork w: work.getAllWork()) {
@@ -171,22 +173,19 @@ public class LlapDecider implements PhysicalPlanResolver {
         return; // Not based on ARP and cannot assume uniform distribution, bail.
       }
       clusterState.initClusterInfo();
-      final int targetCount;
-      final int executorCount;
-      final int maxReducers = conf.getIntVar(HiveConf.ConfVars.MAXREDUCERS);
+      int targetCount = 0;
       if (!clusterState.hasClusterInfo()) {
         LOG.warn("Cannot determine LLAP cluster information");
-        executorCount = executorsPerNode; // assume 1 node
+        targetCount = (int)Math.ceil(minReducersPerExec * 1 * executorsPerNode);
       } else {
-        executorCount =
-            clusterState.getKnownExecutorCount() + executorsPerNode
-                * clusterState.getNodeCountWithUnknownExecutors();
+        targetCount = (int)Math.ceil(minReducersPerExec * (clusterState.getKnownExecutorCount()
+            + clusterState.getNodeCountWithUnknownExecutors() * executorsPerNode));
       }
-      targetCount = Math.min(maxReducers, (int) Math.ceil(minReducersPerExec * executorCount));
-      // We only increase the targets here, but we stay below maxReducers
+      // We only increase the targets here.
       if (reduceWork.isAutoReduceParallelism()) {
         // Do not exceed the configured max reducers.
-        int newMin = Math.min(maxReducers, Math.max(reduceWork.getMinReduceTasks(), targetCount));
+        int newMin = Math.min(conf.getIntVar(HiveConf.ConfVars.MAXREDUCERS),
+            Math.max(reduceWork.getMinReduceTasks(), targetCount));
         if (newMin < reduceWork.getMaxReduceTasks()) {
           reduceWork.setMinReduceTasks(newMin);
           reduceWork.getEdgePropRef().setAutoReduce(conf, true, newMin,
@@ -314,7 +313,7 @@ public class LlapDecider implements PhysicalPlanResolver {
       exprs.add(expr);
       while (!exprs.isEmpty()) {
         if (LOG.isDebugEnabled()) {
-          LOG.debug("Checking '{}'",expr.getExprString());
+          LOG.debug(String.format("Checking '%s'",expr.getExprString()));
         }
 
         ExprNodeDesc cur = exprs.removeFirst();
@@ -344,7 +343,7 @@ public class LlapDecider implements PhysicalPlanResolver {
 
     private boolean checkAggregator(AggregationDesc agg) throws SemanticException {
       if (LOG.isDebugEnabled()) {
-        LOG.debug("Checking '{}'", agg.getExprString());
+        LOG.debug(String.format("Checking '%s'", agg.getExprString()));
       }
 
       boolean result = checkExpressions(agg.getParameters());
@@ -375,64 +374,71 @@ public class LlapDecider implements PhysicalPlanResolver {
       return true;
     }
 
-    private Map<SemanticRule, SemanticNodeProcessor> getRules() {
-      Map<SemanticRule, SemanticNodeProcessor> opRules = new LinkedHashMap<SemanticRule, SemanticNodeProcessor>();
+    private Map<Rule, NodeProcessor> getRules() {
+      Map<Rule, NodeProcessor> opRules = new LinkedHashMap<Rule, NodeProcessor>();
       opRules.put(new RuleRegExp("No scripts", ScriptOperator.getOperatorName() + "%"),
-          new SemanticNodeProcessor() {
+          new NodeProcessor() {
           @Override
           public Object process(Node n, Stack<Node> s, NodeProcessorCtx c,
               Object... os) {
             LOG.debug("Cannot run operator [" + n + "] in llap mode.");
-              return Boolean.FALSE;
+            return new Boolean(false);
           }
         });
-      opRules.put(new RuleRegExp("No user code in fil", FilterOperator.getOperatorName() + "%"), new SemanticNodeProcessor() {
-        @Override
-        public Object process(Node n, Stack<Node> s, NodeProcessorCtx c, Object... os) {
-          ExprNodeDesc expr = ((FilterOperator) n).getConf().getPredicate();
-          boolean retval = checkExpression(expr);
-          if (!retval) {
-            LOG.info("Cannot run filter operator [" + n + "] in llap mode");
-          }
-          return Boolean.valueOf(retval);
-        }
-      });
-      opRules.put(new RuleRegExp("No user code in gby", GroupByOperator.getOperatorName() + "%"), new SemanticNodeProcessor() {
-        @Override
-        public Object process(Node n, Stack<Node> s, NodeProcessorCtx c, Object... os) {
-          @SuppressWarnings("unchecked")
-          List<AggregationDesc> aggs = ((Operator<GroupByDesc>) n).getConf().getAggregators();
-          boolean retval = checkAggregators(aggs);
-          if (!retval) {
-            LOG.info("Cannot run group by operator [" + n + "] in llap mode");
-          }
-          return Boolean.valueOf(retval);
-        }
-      });
-      opRules.put(new RuleRegExp("No user code in select", SelectOperator.getOperatorName() + "%"),
-          new SemanticNodeProcessor() {
-            @Override
-            public Object process(Node n, Stack<Node> s, NodeProcessorCtx c, Object... os) {
-              @SuppressWarnings({"unchecked"})
-              List<ExprNodeDesc> exprs = ((Operator<SelectDesc>) n).getConf().getColList();
-              boolean retval = checkExpressions(exprs);
-              if (!retval) {
-                LOG.info("Cannot run select operator [" + n + "] in llap mode");
-              }
-              return Boolean.valueOf(retval);
+      opRules.put(new RuleRegExp("No user code in fil", FilterOperator.getOperatorName() + "%"),
+          new NodeProcessor() {
+          @Override
+          public Object process(Node n, Stack<Node> s, NodeProcessorCtx c,
+              Object... os) {
+            ExprNodeDesc expr = ((FilterOperator)n).getConf().getPredicate();
+            Boolean retval = new Boolean(checkExpression(expr));
+            if (!retval) {
+              LOG.info("Cannot run filter operator [" + n + "] in llap mode");
             }
-          });
+            return new Boolean(retval);
+          }
+        });
+      opRules.put(new RuleRegExp("No user code in gby", GroupByOperator.getOperatorName() + "%"),
+          new NodeProcessor() {
+          @Override
+          public Object process(Node n, Stack<Node> s, NodeProcessorCtx c,
+              Object... os) {
+            @SuppressWarnings("unchecked")
+            List<AggregationDesc> aggs = ((Operator<GroupByDesc>) n).getConf().getAggregators();
+            Boolean retval = new Boolean(checkAggregators(aggs));
+            if (!retval) {
+              LOG.info("Cannot run group by operator [" + n + "] in llap mode");
+            }
+            return new Boolean(retval);
+          }
+        });
+      opRules.put(new RuleRegExp("No user code in select", SelectOperator.getOperatorName() + "%"),
+          new NodeProcessor() {
+          @Override
+          public Object process(Node n, Stack<Node> s, NodeProcessorCtx c,
+              Object... os) {
+            @SuppressWarnings({ "unchecked" })
+            List<ExprNodeDesc> exprs = ((Operator<SelectDesc>) n).getConf().getColList();
+            Boolean retval = new Boolean(checkExpressions(exprs));
+            if (!retval) {
+              LOG.info("Cannot run select operator [" + n + "] in llap mode");
+            }
+            return new Boolean(retval);
+          }
+        });
 
       if (!conf.getBoolVar(HiveConf.ConfVars.LLAP_ENABLE_GRACE_JOIN_IN_LLAP)) {
-        opRules.put(new RuleRegExp("Disable grace hash join if LLAP mode and not dynamic partition hash join",
-            MapJoinOperator.getOperatorName() + "%"), new SemanticNodeProcessor() {
+        opRules.put(
+            new RuleRegExp("Disable grace hash join if LLAP mode and not dynamic partition hash join",
+                MapJoinOperator.getOperatorName() + "%"), new NodeProcessor() {
               @Override
               public Object process(Node n, Stack<Node> s, NodeProcessorCtx c, Object... os) {
                 MapJoinOperator mapJoinOp = (MapJoinOperator) n;
-                if (mapJoinOp.getConf().isHybridHashJoin() && !(mapJoinOp.getConf().isDynamicPartitionHashJoin())) {
+                if (mapJoinOp.getConf().isHybridHashJoin()
+                    && !(mapJoinOp.getConf().isDynamicPartitionHashJoin())) {
                   mapJoinOpList.add((MapJoinOperator) n);
                 }
-                return Boolean.TRUE;
+                return new Boolean(true);
               }
             });
       }
@@ -443,8 +449,8 @@ public class LlapDecider implements PhysicalPlanResolver {
     private boolean evaluateOperators(BaseWork work) throws SemanticException {
       // lets take a look at the operators. we're checking for user
       // code in those. we will not run that in llap.
-      SemanticDispatcher disp = new DefaultRuleDispatcher(null, rules, null);
-      SemanticGraphWalker ogw = new DefaultGraphWalker(disp);
+      Dispatcher disp = new DefaultRuleDispatcher(null, rules, null);
+      GraphWalker ogw = new DefaultGraphWalker(disp);
 
       ArrayList<Node> topNodes = new ArrayList<Node>();
       topNodes.addAll(work.getAllRootOperators());
@@ -539,7 +545,7 @@ public class LlapDecider implements PhysicalPlanResolver {
     }
 
     // create dispatcher and graph walker
-    SemanticDispatcher disp = new LlapDecisionDispatcher(pctx, mode);
+    Dispatcher disp = new LlapDecisionDispatcher(pctx, mode);
     TaskGraphWalker ogw = new TaskGraphWalker(disp);
 
     // get all the tasks nodes from root task
