@@ -31,13 +31,13 @@ import org.apache.hadoop.hive.ql.exec.vector.expressions.BRoundWithNumDigitsDoub
 import org.apache.hadoop.hive.ql.exec.vector.expressions.ColAndCol;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.ColOrCol;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.DoubleColumnInList;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.DynamicValueVectorExpression;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.FilterExprAndExpr;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.FilterExprOrExpr;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.FuncLogWithBaseDoubleToDouble;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.FuncLogWithBaseLongToDouble;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.FuncPowerDoubleToDouble;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprColumnCondExpr;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprCondExprCondExpr;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.IdentityExpression;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprCharScalarStringGroupColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprDoubleColumnDoubleColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprLongColumnLongColumn;
@@ -47,7 +47,6 @@ import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprStringGroupColumn
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprStringGroupColumnVarCharScalar;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprStringScalarStringGroupColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprStringScalarStringScalar;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.StringLTrimCol;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprTimestampColumnColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprTimestampColumnScalar;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprTimestampScalarColumn;
@@ -55,10 +54,10 @@ import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprTimestampScal
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IfExprVarCharScalarStringGroupColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IsNotNull;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.IsNull;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.LongColModuloLongColumn;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.LongColModuloLongColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.LongColumnInList;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.LongColEqualLongScalar;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.LongColGreaterLongScalar;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.LongColEqualLongScalar;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.LongColGreaterLongScalar;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.NotCol;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.RoundWithNumDigitsDoubleToDouble;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.SelectColumnIsFalse;
@@ -66,7 +65,7 @@ import org.apache.hadoop.hive.ql.exec.vector.expressions.SelectColumnIsNotNull;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.SelectColumnIsNull;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.SelectColumnIsTrue;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.StringColumnInList;
-import org.apache.hadoop.hive.ql.exec.vector.expressions.StringLTrimColScalar;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.StringLTrim;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.StringLower;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.StringUpper;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.VectorExpression;
@@ -85,6 +84,7 @@ import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprLongScalarLon
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprDoubleColumnDoubleScalar;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprDoubleScalarDoubleColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprDoubleScalarDoubleScalar;
+import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.IfExprDoubleScalarLongColumn;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.DoubleColUnaryMinus;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.FilterDoubleColLessDoubleScalar;
 import org.apache.hadoop.hive.ql.exec.vector.expressions.gen.FilterDoubleColumnBetween;
@@ -275,9 +275,7 @@ public class TestVectorizationContext {
     VectorExpression childExpr1 = ve.getChildExpressions()[0];
     VectorExpression childExpr2 = ve.getChildExpressions()[1];
     System.out.println(ve.toString());
-    // TODO: HIVE-20985 disabled output column reuse
-    //assertEquals(6, ve.getOutputColumnNum());
-    assertEquals(10, ve.getOutputColumnNum());
+    assertEquals(6, ve.getOutputColumnNum());
 
     assertTrue(childExpr1 instanceof LongColSubtractLongColumn);
     assertEquals(1, childExpr1.getChildExpressions().length);
@@ -288,11 +286,8 @@ public class TestVectorizationContext {
     assertTrue(childExpr2 instanceof LongColMultiplyLongColumn);
     assertEquals(1, childExpr2.getChildExpressions().length);
     assertTrue(childExpr2.getChildExpressions()[0] instanceof LongColModuloLongColumn);
-    // TODO: HIVE-20985 disabled output column reuse
-    //assertEquals(8, childExpr2.getOutputColumnNum());
-    //assertEquals(6, childExpr2.getChildExpressions()[0].getOutputColumnNum());
-    assertEquals(9, childExpr2.getOutputColumnNum());
-    assertEquals(8, childExpr2.getChildExpressions()[0].getOutputColumnNum());
+    assertEquals(8, childExpr2.getOutputColumnNum());
+    assertEquals(6, childExpr2.getChildExpressions()[0].getOutputColumnNum());
   }
 
   @Test
@@ -437,7 +432,7 @@ public class TestVectorizationContext {
   @Test
   public void testFloatInExpressions() throws HiveException {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Float.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPPlus udf = new GenericUDFOPPlus();
 
@@ -459,7 +454,7 @@ public class TestVectorizationContext {
   @Test
   public void testVectorizeFilterAndOrExpression() throws HiveException {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc = new ExprNodeGenericFuncDesc();
@@ -471,7 +466,7 @@ public class TestVectorizationContext {
     greaterExprDesc.setChildren(children1);
 
     ExprNodeColumnDesc col2Expr = new ExprNodeColumnDesc(Float.class, "col2", "table", false);
-    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(Float.valueOf(1.0f));
+    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(new Float(1.0));
 
     GenericUDFOPLessThan udf2 = new GenericUDFOPLessThan();
     ExprNodeGenericFuncDesc lessExprDesc = new ExprNodeGenericFuncDesc();
@@ -520,7 +515,7 @@ public class TestVectorizationContext {
   @Test
   public void testVectorizeFilterMultiAndOrExpression() throws HiveException {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc = new ExprNodeGenericFuncDesc();
@@ -532,7 +527,7 @@ public class TestVectorizationContext {
     greaterExprDesc.setChildren(children1);
 
     ExprNodeColumnDesc col2Expr = new ExprNodeColumnDesc(Float.class, "col2", "table", false);
-    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(Float.valueOf(1.0f));
+    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(new Float(1.0));
 
     GenericUDFOPLessThan udf2 = new GenericUDFOPLessThan();
     ExprNodeGenericFuncDesc lessExprDesc = new ExprNodeGenericFuncDesc();
@@ -544,7 +539,7 @@ public class TestVectorizationContext {
     lessExprDesc.setChildren(children2);
 
     ExprNodeColumnDesc col3Expr = new ExprNodeColumnDesc(Integer.class, "col3", "table", false);
-    ExprNodeConstantDesc const3Desc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc const3Desc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPGreaterThan udf3 = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc3 = new ExprNodeGenericFuncDesc();
@@ -598,7 +593,7 @@ public class TestVectorizationContext {
   @Test
   public void testVectorizeAndOrProjectionExpression() throws HiveException {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc = new ExprNodeGenericFuncDesc();
@@ -662,7 +657,7 @@ public class TestVectorizationContext {
   @Test
   public void testNotExpression() throws HiveException {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc = new ExprNodeGenericFuncDesc();
@@ -700,7 +695,7 @@ public class TestVectorizationContext {
   @Test
   public void testNullExpressions() throws HiveException {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc = new ExprNodeGenericFuncDesc();
@@ -732,16 +727,14 @@ public class TestVectorizationContext {
 
     ve = vc.getVectorExpression(isNullExpr, VectorExpressionDescriptor.Mode.PROJECTION);
     assertEquals(ve.getClass(), IsNull.class);
-    // TODO: HIVE-20985 disabled output column reuse
-    //assertEquals(3, ve.getOutputColumnNum());
-    assertEquals(4, ve.getOutputColumnNum());
+    assertEquals(3, ve.getOutputColumnNum());
     assertEquals(ve.getChildExpressions()[0].getClass(), LongColGreaterLongScalar.class);
   }
 
   @Test
   public void testNotNullExpressions() throws HiveException {
     ExprNodeColumnDesc col1Expr = new ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc greaterExprDesc = new ExprNodeGenericFuncDesc();
@@ -799,7 +792,7 @@ public class TestVectorizationContext {
   @Test
   public void testFilterWithNegativeScalar() throws HiveException {
     ExprNodeColumnDesc col1Expr = new  ExprNodeColumnDesc(Integer.class, "col1", "table", false);
-    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(Integer.valueOf(-10));
+    ExprNodeConstantDesc constDesc = new ExprNodeConstantDesc(new Integer(-10));
 
     GenericUDFOPGreaterThan udf = new GenericUDFOPGreaterThan();
     ExprNodeGenericFuncDesc exprDesc = new ExprNodeGenericFuncDesc();
@@ -961,10 +954,10 @@ public class TestVectorizationContext {
     ve = vc.getVectorExpression(anotherUnary);
     VectorExpression childVe = ve.getChildExpressions()[0];
     assertEquals(StringLower.class, childVe.getClass());
-    assertEquals(2, childVe.getOutputColumnNum());
+    assertEquals(2, ((StringLower) childVe).getOutputColumnNum());
 
-    assertEquals(StringLTrimCol.class, ve.getClass());
-    assertEquals(3, ve.getOutputColumnNum());
+    assertEquals(StringLTrim.class, ve.getClass());
+    assertEquals(3, ((StringLTrim) ve).getOutputColumnNum());
   }
 
   @Test
@@ -1111,7 +1104,7 @@ public class TestVectorizationContext {
     // string BETWEEN
     GenericUDFBetween udf = new GenericUDFBetween();
     List<ExprNodeDesc> children1 = new ArrayList<ExprNodeDesc>();
-    children1.add(new ExprNodeConstantDesc(Boolean.FALSE)); // no NOT keyword
+    children1.add(new ExprNodeConstantDesc(new Boolean(false))); // no NOT keyword
     children1.add(col1Expr);
     children1.add(constDesc);
     children1.add(constDesc2);
@@ -1128,7 +1121,7 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterStringColumnBetween);
 
     // string NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE)); // has NOT keyword
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(true))); // has NOT keyword
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterStringColumnNotBetween);
 
@@ -1141,7 +1134,7 @@ public class TestVectorizationContext {
     // CHAR BETWEEN
     udf = new GenericUDFBetween();
     children1 = new ArrayList<ExprNodeDesc>();
-    children1.add(new ExprNodeConstantDesc(Boolean.FALSE)); // no NOT keyword
+    children1.add(new ExprNodeConstantDesc(new Boolean(false))); // no NOT keyword
     children1.add(col1Expr);
     children1.add(constDesc);
     children1.add(constDesc2);
@@ -1153,7 +1146,7 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterCharColumnBetween);
 
     // CHAR NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE)); // has NOT keyword
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(true))); // has NOT keyword
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterCharColumnNotBetween);
 
@@ -1166,7 +1159,7 @@ public class TestVectorizationContext {
     // VARCHAR BETWEEN
     udf = new GenericUDFBetween();
     children1 = new ArrayList<ExprNodeDesc>();
-    children1.add(new ExprNodeConstantDesc(Boolean.FALSE)); // no NOT keyword
+    children1.add(new ExprNodeConstantDesc(new Boolean(false))); // no NOT keyword
     children1.add(col1Expr);
     children1.add(constDesc);
     children1.add(constDesc2);
@@ -1178,12 +1171,12 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterVarCharColumnBetween);
 
     // VARCHAR NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE)); // has NOT keyword
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(true))); // has NOT keyword
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterVarCharColumnNotBetween);
 
     // long BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.FALSE));
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(false)));
     children1.set(1, new ExprNodeColumnDesc(Long.class, "col1", "table", false));
     children1.set(2, new ExprNodeConstantDesc(10));
     children1.set(3, new ExprNodeConstantDesc(20));
@@ -1191,12 +1184,12 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterLongColumnBetween);
 
     // long NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE));
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(true)));
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterLongColumnNotBetween);
 
     // double BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.FALSE));
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(false)));
     children1.set(1, new ExprNodeColumnDesc(Double.class, "col1", "table", false));
     children1.set(2, new ExprNodeConstantDesc(10.0d));
     children1.set(3, new ExprNodeConstantDesc(20.0d));
@@ -1204,12 +1197,12 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterDoubleColumnBetween);
 
     // double NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE));
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(true)));
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterDoubleColumnNotBetween);
 
     // timestamp BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.FALSE));
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(false)));
     children1.set(1, new ExprNodeColumnDesc(Timestamp.class, "col1", "table", false));
     children1.set(2, new ExprNodeConstantDesc("2013-11-05 00:00:00.000"));
     children1.set(3, new ExprNodeConstantDesc("2013-11-06 00:00:00.000"));
@@ -1217,7 +1210,7 @@ public class TestVectorizationContext {
     assertEquals(FilterTimestampColumnBetween.class, ve.getClass());
 
     // timestamp NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE));
+    children1.set(0, new ExprNodeConstantDesc(new Boolean(true)));
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertEquals(FilterTimestampColumnNotBetween.class, ve.getClass());
   }
@@ -1276,15 +1269,12 @@ public class TestVectorizationContext {
    */
   @Test
   public void testIfConditionalExprs() throws HiveException {
-
-    // Predicate.
-    ExprNodeColumnDesc col1Expr = new  ExprNodeColumnDesc(Boolean.class, "col1", "table", false);
-
+    ExprNodeColumnDesc col1Expr = new  ExprNodeColumnDesc(Long.class, "col1", "table", false);
     ExprNodeColumnDesc col2Expr = new  ExprNodeColumnDesc(Long.class, "col2", "table", false);
     ExprNodeColumnDesc col3Expr = new  ExprNodeColumnDesc(Long.class, "col3", "table", false);
 
-    ExprNodeConstantDesc constDesc2 = new ExprNodeConstantDesc(Integer.valueOf(1));
-    ExprNodeConstantDesc constDesc3 = new ExprNodeConstantDesc(Integer.valueOf(2));
+    ExprNodeConstantDesc constDesc2 = new ExprNodeConstantDesc(new Integer(1));
+    ExprNodeConstantDesc constDesc3 = new ExprNodeConstantDesc(new Integer(2));
 
     // long column/column IF
     GenericUDFIf udf = new GenericUDFIf();
@@ -1301,7 +1291,6 @@ public class TestVectorizationContext {
     columns.add("col2");
     columns.add("col3");
     VectorizationContext vc = new VectorizationContext("name", columns);
-    exprDesc.setTypeInfo(TypeInfoFactory.longTypeInfo);
     VectorExpression ve = vc.getVectorExpression(exprDesc);
     assertTrue(ve instanceof IfExprLongColumnLongColumn);
 
@@ -1327,7 +1316,6 @@ public class TestVectorizationContext {
     // double column/column IF
     children1.set(1, col2Expr);
     children1.set(2, col3Expr);
-    exprDesc.setTypeInfo(TypeInfoFactory.doubleTypeInfo);
     ve = vc.getVectorExpression(exprDesc);
     assertTrue(ve instanceof IfExprDoubleColumnDoubleColumn);
 
@@ -1349,7 +1337,7 @@ public class TestVectorizationContext {
     // double scalar/long column IF
     children1.set(2, new  ExprNodeColumnDesc(Long.class, "col3", "table", false));
     ve = vc.getVectorExpression(exprDesc);
-    assertTrue(ve instanceof IfExprColumnCondExpr);
+    assertTrue(ve instanceof IfExprDoubleScalarLongColumn);
 
     // Additional combinations of (long,double)X(column,scalar) for each of the second
     // and third arguments are omitted. We have coverage of all the source templates
@@ -1362,7 +1350,6 @@ public class TestVectorizationContext {
     // timestamp column/column IF
     children1.set(1, col2Expr);
     children1.set(2, col3Expr);
-    exprDesc.setTypeInfo(TypeInfoFactory.timestampTypeInfo);
     ve = vc.getVectorExpression(exprDesc);
     assertTrue(ve instanceof IfExprTimestampColumnColumn);
 
@@ -1376,17 +1363,23 @@ public class TestVectorizationContext {
     children1.set(2, f);
     ve = vc.getVectorExpression(exprDesc);
 
-    assertTrue(ve instanceof IfExprTimestampColumnScalar);
+    // We check for two different classes below because initially the result
+    // is IfExprLongColumnLongColumn but in the future if the system is enhanced
+    // with constant folding then the result will be IfExprLongColumnLongScalar.
+    assertTrue(IfExprTimestampColumnColumn.class == ve.getClass()
+               || IfExprTimestampColumnScalar.class == ve.getClass());
 
     // timestamp scalar/scalar
     children1.set(1, f);
     ve = vc.getVectorExpression(exprDesc);
-    assertTrue(ve instanceof IfExprTimestampScalarScalar);
+    assertTrue(IfExprTimestampColumnColumn.class == ve.getClass()
+        || IfExprTimestampScalarScalar.class == ve.getClass());
 
     // timestamp scalar/column
     children1.set(2, col3Expr);
     ve = vc.getVectorExpression(exprDesc);
-    assertTrue(ve instanceof IfExprTimestampScalarColumn);
+    assertTrue(IfExprTimestampColumnColumn.class == ve.getClass()
+        || IfExprTimestampScalarColumn.class == ve.getClass());
 
     // test for boolean type
     col2Expr = new  ExprNodeColumnDesc(Boolean.class, "col2", "table", false);
@@ -1395,7 +1388,6 @@ public class TestVectorizationContext {
     // column/column
     children1.set(1, col2Expr);
     children1.set(2, col3Expr);
-    exprDesc.setTypeInfo(TypeInfoFactory.booleanTypeInfo);
     ve = vc.getVectorExpression(exprDesc);
     assertTrue(ve instanceof IfExprLongColumnLongColumn);
 
@@ -1423,7 +1415,6 @@ public class TestVectorizationContext {
     // column/column
     children1.set(1, col2Expr);
     children1.set(2, col3Expr);
-    exprDesc.setTypeInfo(TypeInfoFactory.stringTypeInfo);
     ve = vc.getVectorExpression(exprDesc);
     assertTrue(ve instanceof IfExprStringGroupColumnStringGroupColumn);
 
@@ -1453,8 +1444,7 @@ public class TestVectorizationContext {
     children1.set(1, col2Expr);
     children1.set(2, col3Expr);
     ve = vc.getVectorExpression(exprDesc);
-    exprDesc.setTypeInfo(charTypeInfo);
-    assertTrue(ve instanceof IfExprCondExprCondExpr);
+    assertTrue(ve instanceof IfExprStringGroupColumnStringGroupColumn);
 
     // column/scalar
     children1.set(2,  constDesc3);
@@ -1481,7 +1471,6 @@ public class TestVectorizationContext {
     // column/column
     children1.set(1, col2Expr);
     children1.set(2, col3Expr);
-    exprDesc.setTypeInfo(varcharTypeInfo);
     ve = vc.getVectorExpression(exprDesc);
     assertTrue(ve instanceof IfExprStringGroupColumnStringGroupColumn);
 
